# autoresearch-trading-bot

./: .gitignore  README.md  ib_paper_adapter.py  live_pilot_config.example.json  live_pilot_guardrails.py  paper_trading_validation.py  prepare.py  program.md  pyproject.toml  results.tsv  run_trading_agent.py  setup-trading-autoresearch.sh  strategy.py
scripts/: deploy_quantvps.sh  remote_install_quantvps.sh  tail_quantvps_logs.sh
tests/: test_ib_paper_adapter.py  test_live_pilot_guardrails.py  test_paper_trading_validation.py  test_prepare.py  test_run_trading_agent.py  test_scripts.py  test_strategy.py
tests/fixtures/: strategy_baseline_snapshot.json  strategy_immutable_region.sha256
